fixed awards glitch

--- a/about/index.html
+++ b/about/index.html
@@ -44,7 +44,7 @@
 						<div class="nav-mobile-links">
 							<a href="/directors/">DIRECTORS</a><br>
 							<br>
-							<a class="nav-mobile-links-director" href="/directors/david-quinn">David Quinn</a><br><a class="nav-mobile-links-director" href="/directors/dugan-gundelfinger">Dugan Gundelfinger</a><br><a class="nav-mobile-links-director" href="/directors/isaac-ravishankara">Isaac Ravishankara</a><br><a class="nav-mobile-links-director" href="/directors/ismael">Ismael</a><br><a class="nav-mobile-links-director" href="/directors/jackie-abraham">Jackie Abraham</a><br><a class="nav-mobile-links-director" href="/directors/james-lawes">James Lawes</a><br><a class="nav-mobile-links-director" href="/directors/jeremi-durand">Jeremi Durand</a><br><a class="nav-mobile-links-director" href="/directors/kate-hollowell">Kate Hollowell</a><br><a class="nav-mobile-links-director" href="/directors/leo-zuckerman">Leo Zuckerman</a><br><a class="nav-mobile-links-director" href="/directors/mapp">Mapp</a><br><a class="nav-mobile-links-director" href="/directors/matt-rhodes">Matt Rhodes</a><br><a class="nav-mobile-links-director" href="/directors/matthew-swanson">Matthew Swanson</a><br><a class="nav-mobile-links-director" href="/directors/new-york-nico">New York Nico</a><br><a class="nav-mobile-links-director" href="/directors/nikki-ross">Nikki Ross</a><br><a class="nav-mobile-links-director" href="/directors/nolan-sarner">Nolan Sarner</a><br><a class="nav-mobile-links-director" href="/directors/renee-mao">Renée Mao</a><br><a class="nav-mobile-links-director" href="/directors/rob-fiocca">Rob Fiocca</a><br><a class="nav-mobile-links-director" href="/directors/rodney-lucas">Rodney Lucas</a><br><a class="nav-mobile-links-director" href="/directors/ruganzu-howard">Ruganzu Howard</a><br><a class="nav-mobile-links-director" href="/directors/sam-hughes">Sam Hughes</a><br><a class="nav-mobile-links-director" href="/directors/sebastian-hill-esbrand">Sebastian Hill-Esbrand</a><br><a class="nav-mobile-links-director" href="/directors/shawn-zeytinoglu">Shawn Zeytinoglu</a><br><a class="nav-mobile-links-director" href="/directors/stuart-langfield">Stuart Langfield</a><br><a class="nav-mobile-links-director" href="/directors/stuart-mcintyre">Stuart McIntyre</a>
+							<a class="nav-mobile-links-director" href="/directors/david-quinn">David Quinn</a><br><a class="nav-mobile-links-director" href="/directors/dugan-gundelfinger">Dugan Gundelfinger</a><br><a class="nav-mobile-links-director" href="/directors/isaac-ravishankara">Isaac Ravishankara</a><br><a class="nav-mobile-links-director" href="/directors/jackie-abraham">Jackie Abraham</a><br><a class="nav-mobile-links-director" href="/directors/james-lawes">James Lawes</a><br><a class="nav-mobile-links-director" href="/directors/jeremi-durand">Jeremi Durand</a><br><a class="nav-mobile-links-director" href="/directors/kate-hollowell">Kate Hollowell</a><br><a class="nav-mobile-links-director" href="/directors/kevin-castanheira">Kevin Castanheira</a><br><a class="nav-mobile-links-director" href="/directors/leo-zuckerman">Leo Zuckerman</a><br><a class="nav-mobile-links-director" href="/directors/luke-jaden">Luke Jaden</a><br><a class="nav-mobile-links-director" href="/directors/mapp">Mapp</a><br><a class="nav-mobile-links-director" href="/directors/matt-rhodes">Matt Rhodes</a><br><a class="nav-mobile-links-director" href="/directors/matthew-swanson">Matthew Swanson</a><br><a class="nav-mobile-links-director" href="/directors/new-york-nico">New York Nico</a><br><a class="nav-mobile-links-director" href="/directors/nikki-ross">Nikki Ross</a><br><a class="nav-mobile-links-director" href="/directors/nolan-sarner">Nolan Sarner</a><br><a class="nav-mobile-links-director" href="/directors/renee-mao">Renée Mao</a><br><a class="nav-mobile-links-director" href="/directors/rob-fiocca">Rob Fiocca</a><br><a class="nav-mobile-links-director" href="/directors/rodney-lucas">Rodney Lucas</a><br><a class="nav-mobile-links-director" href="/directors/ruganzu-howard">Ruganzu Howard</a><br><a class="nav-mobile-links-director" href="/directors/sam-hughes">Sam Hughes</a><br><a class="nav-mobile-links-director" href="/directors/sebastian-hill-esbrand">Sebastian Hill-Esbrand</a><br><a class="nav-mobile-links-director" href="/directors/shawn-zeytinoglu">Shawn Zeytinoglu</a><br><a class="nav-mobile-links-director" href="/directors/stuart-langfield">Stuart Langfield</a><br><a class="nav-mobile-links-director" href="/directors/stuart-mcintyre">Stuart McIntyre</a><br>
 							<br>
 							<br>
 							<a href="/about/" data-underline="1">ABOUT</a>
@@ -117,6 +117,217 @@
 					</div>
 
 					
+		<section class="news-block">
+			<h3>Leo Zuckerman for Taylor Made Golf</h3>
+			<p>[05.14.2025]</p>
+			<br>
+			<p>
+				<p>A sharp eye meets a smooth swing. Leo Zuckerman<a href="https://www.instagram.com/leozuck/"></a>gets behind the lens for Taylor Made Golf. See <a href="https://www.instagram.com/p/DJpX76oSa3L/">here</a>.<a href="https://www.instagram.com/taylormadegolf/"></a></p>
+
+			</p>
+		</section>
+	
+		<section class="news-block">
+			<h3>Now Representing Luke Jaden</h3>
+			<p>[05.13.2025]</p>
+			<br>
+			<p>
+				<p>We couldn’t be more excited to welcome Luke Jaden <a href="https://www.instagram.com/lukejaden9/"></a>to the Skin and Bones roster. A Michigan kid with big vision. Glad he’s here. See <a href="https://skinandbonesfilm.com/directors/luke-jaden/">more</a>.</p>
+
+			</p>
+		</section>
+	
+		<section class="news-block">
+			<h3>Matt Swanson for Shots Magazine</h3>
+			<p>[05.12.2025]</p>
+			<br>
+			<p>
+				<p>Matt Swanson talks to Shots about a few of his favourite things and why a little absurdity goes a long way when it comes to staying inspired. Read more <a href="https://magazine.shots.net/news/view/matt-swanson-a-few-of-my-favourite-things?fbclid=PAZXh0bgNhZW0CMTEAAaf3fdkt-5wGLpJmcBEt3wM1I9oMa2Bw_PSILz7cVbWmmqwivQjZ3JlZKYbhww_aem_oPZsxJMLldp7ogQ3unzYNQ">here</a>.</p>
+
+			</p>
+		</section>
+	
+		<section class="news-block">
+			<h3>Leo Zuckerman Spotlight</h3>
+			<p>[05.09.2025]</p>
+			<br>
+			<p>
+				<p>Somewhere out there, Leo Zuckerman is <a href="https://www.instagram.com/leozuck/"></a>framing up something special. New work incoming. See <a href="https://www.instagram.com/p/DJcMhCMuw7H/?img_index=1">here</a>.</p>
+
+			</p>
+		</section>
+	
+		<section class="news-block">
+			<h3>Nikki Ross for Sports Club Atelier</h3>
+			<p>[05.06.2025]</p>
+			<br>
+			<p>
+				<p>The team was up at 3am to catch the Alberta sunrise. Worth it. Stunning footage by the talented Nikki Ross <a href="https://www.instagram.com/_nikkiross/"></a>for Sports Club Atelier. See <a href="https://www.instagram.com/p/DJU9ARTOyg7/">here</a>.<a href="https://www.instagram.com/sportsclubatelier/"></a></p>
+
+			</p>
+		</section>
+	
+		<section class="news-block">
+			<h3>BTS Nikki Ross</h3>
+			<p>[05.05.2025]</p>
+			<br>
+			<p>
+				<p>Some moments from Alberta. Nikki Ross <a href="https://www.instagram.com/_nikkiross/"></a>on set for Sports Club Atelier <a href="https://www.instagram.com/sportsclubatelier/"></a>Collection 02. See <a href="https://www.instagram.com/p/DJSclecON9j/?img_index=1">here</a>.</p>
+
+			</p>
+		</section>
+	
+		<section class="news-block">
+			<h3>Matt Swanson for WestJet</h3>
+			<p>[05.01.2025]</p>
+			<br>
+			<p>
+				<p>Matt Swanson <a href="https://www.instagram.com/mdswanson/"></a>always reaching new heights. For WestJet with Rethink Ideas out now. See <a href="https://www.instagram.com/p/DJH3FduSZY_/?img_index=1">here</a>.</p>
+
+			</p>
+		</section>
+	
+		<section class="news-block">
+			<h3>Jackie Abraham for The Marketing Awards</h3>
+			<p>[04.30.2025]</p>
+			<br>
+			<p>
+				<p>The Marketing Awards celebrate those who get it. See you there. Directed by Jackie Abraham. See <a href="https://www.instagram.com/p/DJDHSa-OIre/">here</a>.<a href="https://www.instagram.com/jackieabraham.tv/"></a></p>
+
+			</p>
+		</section>
+	
+		<section class="news-block">
+			<h3>Stuart McIntyre for Gatorade</h3>
+			<p>[04.24.2025]</p>
+			<br>
+			<p>
+				<p>Kendrick. Sanders. McIntyre. Stuart McIntyre for Gatorade. See <a href="https://www.instagram.com/p/DI1sPmAuc-K/">here</a>.</p>
+
+			</p>
+		</section>
+	
+		<section class="news-block">
+			<h3>Dugan Gundelfinger for Butterfinger</h3>
+			<p>[04.23.2025]</p>
+			<br>
+			<p>
+				<p>Dugan’s been busy. New work for Butterfinger. See <a href="https://www.instagram.com/p/DIzUA_wScbC/">here</a>.</p>
+
+			</p>
+		</section>
+	
+		<section class="news-block">
+			<h3>4/20</h3>
+			<p>[04.20.2025]</p>
+			<br>
+			<p>
+				<p>New work from Sebastian Hill-Esbrand<a href="https://www.instagram.com/goodneighbour/"></a> for 4/20.
+Shot on iPhone. Best paired with.. you know. See <a href="https://www.instagram.com/p/DIrf_kPSzjt/">here</a>.</p>
+
+			</p>
+		</section>
+	
+		<section class="news-block">
+			<h3>Linny's</h3>
+			<p>[04.17.2025]</p>
+			<br>
+			<p>
+				<p>New work for EastRoom from Sam Hughes<a href="https://www.instagram.com/sammmhughes/"></a> for Linny’s. See <a href="https://www.instagram.com/p/DIkDT8XORVU/">here</a>.</p>
+
+			</p>
+		</section>
+	
+		<section class="news-block">
+			<h3>Rob Fiocca</h3>
+			<p>[04.16.2025]</p>
+			<br>
+			<p>
+				<p>Rob Fiocca on set with Dentsu<a href="https://www.instagram.com/dentsu/"></a> and Subway Canada <a href="https://www.instagram.com/subwaycanada/"></a>doing what he does best. See <a href="https://www.instagram.com/p/DIhQ7Z9TEV0/?img_index=1">here</a>.</p>
+
+			</p>
+		</section>
+	
+		<section class="news-block">
+			<h3>Nolan Sarner</h3>
+			<p>[04.10.2025]</p>
+			<br>
+			<p>
+				<p>Behind the scenes with Nolan Sarner. Beautiful things in motion. See <a href="https://www.instagram.com/p/DIRus4iS_MP/?img_index=1">here</a>.</p>
+
+			</p>
+		</section>
+	
+		<section class="news-block">
+			<h3>Popeyes BTS</h3>
+			<p>[04.07.2025]</p>
+			<br>
+			<p>
+				<p>On set with Rodney Lucas last week. See <a href="https://www.instagram.com/p/DIKGdymy4sn/?img_index=1">here</a>.</p>
+
+			</p>
+		</section>
+	
+		<section class="news-block">
+			<h3>Isaac Ravishankara for Steady Holiday</h3>
+			<p>[04.04.2025]</p>
+			<br>
+			<p>
+				<p>New work from Isaac for Steady Holiday. See <a href="https://www.instagram.com/p/DICJ73nOKMT/">here</a>.</p>
+
+			</p>
+		</section>
+	
+		<section class="news-block">
+			<h3>Rodney Lucas</h3>
+			<p>[04.03.2025]</p>
+			<br>
+			<p>
+				<p>Rodney Lucas knows a thing or two about good work. New stuff coming soon. See <a href="https://www.instagram.com/p/DH_uf02Sqk-/?img_index=1">here</a>.</p>
+
+			</p>
+		</section>
+	
+		<section class="news-block">
+			<h3>New Door</h3>
+			<p>[03.27.2025]</p>
+			<br>
+			<p>
+				<p>For anyone who’s ever walked in looking for Cozey, this one is for you. See <a href="https://www.instagram.com/p/DHtzAMaPPKz/">here</a>.</p>
+
+			</p>
+		</section>
+	
+		<section class="news-block">
+			<h3>Liane's Birthday</h3>
+			<p>[03.26.2025]</p>
+			<br>
+			<p>
+				<p>Happy belated to the one keeping this production on schedule! Check it out on our instagram <a href="https://www.instagram.com/p/DHqzO1PuS6e/?img_index=1">here.</a></p>
+
+			</p>
+		</section>
+	
+		<section class="news-block">
+			<h3>Skin and Bones Jackets</h3>
+			<p>[03.21.2025]</p>
+			<br>
+			<p>
+				<p>If you know, you know. The 2017 jacket is back—now in red for our anniversary. Get it before it’s gone (again). Check it out on our instagram <a href="https://www.instagram.com/p/DHeSlKdSlgU/">here.</a></p>
+
+			</p>
+		</section>
+	
+		<section class="news-block">
+			<h3>ROM</h3>
+			<p>[03.14.2025]</p>
+			<br>
+			<p>
+				<p>In 1944, Robert “Bob” Hanf wrote this letter to his family from Auschwitz. At the time, all communication was censored so the outside world wouldn’t know what was really happening. In this film, light becomes a beacon of knowledge—passed from witness to witness, ensuring history is not forgotten and its mistakes are not repeated. “What will be the end?” Check out Jeremi Durand&#39;s new spot with the ROM <a href="https://www.instagram.com/reel/DHLyVQuOr1C/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==">here.</a></p>
+
+			</p>
+		</section>
+	
 		<section class="news-block">
 			<h3>Our New Identity</h3>
 			<p>[03.01.2025]</p>
